# interview_task_2

./: .env.example  app.py  database.py  main.py  pyproject.toml  requirement.txt  requirements.txt
